// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<div
  aria-busy={true}
  className="container"
>
  <span
    className="loadingWord text-placeholder-color-gray40 animatedLoading"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
</div>
`;

exports[`TextPlaceholder should be rendered correctly 2`] = `
<div
  aria-busy={true}
  className="container"
>
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
</div>
`;
